# RGBLedControlV2.0-Project_TivaC-Sprints

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Documents/: RGB Control V2.0 - Team 1 - Sub Team A.xlsx
Documents/Flowcharts - Src/: APP.drawio  Button.drawio  GPIO.drawio  LED.drawio  RGB LED Control V1.0 - System Modules.drawio  RGB LED Control V2.0 - System Modules.drawio  SYSTICK.drawio  temp.drawio
LED-V2.0/: LED_Control.uvguix.ME  LED_Control.uvguix.hossam  LED_Control.uvoptx  LED_Control.uvprojx  main.c
LED-V2.0/APP/: app.c  app.h
LED-V2.0/HAL/btn/: btn_interface.h  btn_program.c
LED-V2.0/HAL/led/: led_interface.h  led_program.c
LED-V2.0/LIB/: bit_math.h  std.h
LED-V2.0/LIB/systick/: systick_interface.h  systick_linking_config.c  systick_linking_config.h  systick_private.h
LED-V2.0/Listings/: startup_tm4c123.lst
LED-V2.0/MCAL/gpio/: gpio_interface.h  gpio_private.h  gpio_program.c
LED-V2.0/MCAL/systick/: systick_interface.h  systick_linking_config.c  systick_private.h  systick_program.c
LED-V2.0/Objects/: LED_Control.axf  LED_Control.build_log.htm  LED_Control.hex  LED_Control.htm  LED_Control.lnp  LED_Control_Target 1.dep
LED-V2.0/RTE/Device/TM4C123GH6PM/: system_TM4C123.c
LED-V2.0/RTE/_Target_1/: RTE_Components.h
